[package]
name = "from-env-derive"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A derive macro for FromEnv trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "1.0.33"
syn = "^2"
